fix getFirst in list